--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,16 @@
-body {
-    font-family: "raleway", Arial, sans-serif;
-    font-weight: normal;
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 92px 24px; 
+}
+
+.header__links-list {
+    display: flex;
+    justify-content: space-around;
+    gap: 40px;
+    
 }
 
 li {
@@ -12,6 +22,13 @@ li:first-child {
     list-style-type: none;
     text-decoration: none;
 }
+
+.header__logo {
+    display: block;
+    width: 129.11px;
+    height: 104.65px;
+}
+
 
 
 
