--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 
 .header__link_active {
   text-decoration: none;
+  pointer-events: none;
 }
 
 .header__links-list-item.header__link.see__lots {
@@ -286,9 +287,7 @@ button {
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  /* align-self: center; */
   justify-self: center;
-  /* align-items: center; */
   justify-content: space-around;
 }
 
@@ -311,31 +310,16 @@ button {
   grid-row: 2 / 3;
 }
 
-.about__text-gap {
+.about__text {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.01em;
   color: #000000;
-  margin-bottom: 25px;
-}
-
-.about__text-withoutgap {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000;
-}
-
-.about__text-gap_spacing-regular {
-  letter-spacing: 0;
-}
-
-.about__text-gap_spacing-minus-one {
-  letter-spacing: 0.01em;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .footer {
